--- a/vignettes/data-problems.Rmd
+++ b/vignettes/data-problems.Rmd
@@ -57,13 +57,17 @@ install_github("lhmet/inmetwrangler")
 library(inmetwrangler)
 ```
 
+```{r, echo = FALSE}
+knitr::opts_chunk$set(comment = "#>")
+```
+
 
 Outros pacotes necessários para reproduzir os exemplos mostrados a seguir:
 
-```{r}
+```{r, message=FALSE, warning=FALSE}
 library(knitr)
-library(readr)
-library(openair)
+library(tidyverse)
+library(stringr)
 ```
 
 
@@ -176,6 +180,29 @@ kable(A852_problems)
 
 Foram encontradas `r nrow(A852_problems)` observações com mais variáveis do que o esperado (29). Essas linhas são consecutivas, desde a linha `r min(A852_problems$row_file)` no arquivo original até a linha `r max(A852_problems$row_file)`.
 
+### Caso 3: arquivos sem problemas
+
+Quando os arquivos importados não apresentarem problemas a tabela com os 
+problemas estará vazia. Então a função `import_txt_files_inmet` quando usada
+para detectar problemas (`import_txt_files_inmet(..., only.problems = TRUE)`)
+retornará informação somente sobre os arquivos com problemas
+(caso eles os tenham).
+
+```{r}
+txt_files <- list.files(system.file("extdata", 
+                                package = "inmetwrangler"),
+                    full.names = TRUE) 
+txt_files_no_prob <- discard(txt_files, ~str_detect(.x, "A852|A838"))
+# somente arquivos sem problemas estruturais
+basename(txt_files_no_prob)
+probs <- import_txt_files_inmet(txt_files_no_prob, 
+                       verbose = FALSE, 
+                       only.problems = TRUE, 
+                       full.names = FALSE)
+probs
+str(probs)
+```
+
 
 ## Importando os arquivos de dados
 
@@ -183,10 +210,6 @@ A função `import_txt_files_inmet()` importa arquivos de dados
 horários dando conta das diferenças de cabeçalhos dos arquivos e preenche (ou remove) as variáveis de uma observação com campos incompletos (excedentes).
 
 ```{r}
-txt_files <- list.files(system.file("extdata", 
-                                package = "inmetwrangler"),
-                    full.names = TRUE)
-txt_files
 # merge data files
 hdata <- import_txt_files_inmet(files = txt_files, verbose = FALSE)
 kable(head(hdata[, 1:10]))
@@ -197,7 +220,7 @@ kable(tail(hdata[, 1:10]))
 
 
 
-```{r, fig.align='center', fig.height=9, fig.width=6, fig.cap = "Séries horárias de Precipitação.", include = FALSE}
+```{r, fig.align='center', fig.height=9, fig.width=6, fig.cap = "Séries horárias de Precipitação.", eval = FALSE, echo=FALSE}
 ## Gráficos
 #The figure sizes have been customised so that you can easily put two images side-by-side. 
 nsites <- length(unique(hdata$site))
