--- a/vignettes/data-problems.Rmd
+++ b/vignettes/data-problems.Rmd
@@ -8,7 +8,7 @@ output:
     keep_md: true
     fig_caption: yes
 vignette: >
-  %\VignetteIndexEntry{Vignette Title}
+  %\VignetteIndexEntry{Diagnóstico de problemas na estrutura dos dados de 2010-2011.}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
